test/conformance/chainsaw/deprecations/create-blocked/cluster-cleanup-policy-v2.yaml
apiVersion: kyverno.io/v2
kind: ClusterCleanupPolicy
metadata:
  name: deprecations-cluster-cleanup-v2
spec:
  schedule: "0 0 * * *"
  match:
    any:
    - resources:
        kinds:
        - Namespace
        names:
        - deprecations-does-not-exist
