test/conformance/chainsaw/deprecations/create-blocked/cluster-policy-v1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deprecations-cluster-policy-v1
spec:
  rules:
  - name: check-labels
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "label app is required"
      pattern:
        metadata:
          labels:
            app: "?*"
