test/conformance/chainsaw/deprecations/create-blocked/cluster-policy-v2beta1.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: deprecations-cluster-policy-v2beta1
spec:
  rules:
  - name: check-labels
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "label app is required"
      pattern:
        metadata:
          labels:
            app: "?*"
